# zig-toolchain.cmake

./: .clang-format  .gitattributes  README.md  build.zig  zig-toolchain.cmake  zig.toolchain.cmake
.github/workflows/: release.yml  test.yml
test/: CMakeLists.txt
test/include/: shared_lib.h  static_lib.h
test/src/: main.c  main.cpp  shared_lib.c  shared_lib.cpp  static_lib.c  static_lib.cpp
